--- a/index.erb
+++ b/index.erb
@@ -16,9 +16,7 @@
 
       <%= @header_html  %>
 
-      <div id="rails_plugin_installation"><%= @plugin_install %></div>
-
-      <a href="http://rdoc.info/projects/atomicobject/hardmock"><img border=0 src="sample_code.png"></a>
+      <a alt="Code Sample" title="Click to view API docs" href="http://rubydoc.info/gems/hardmock/1.3.7/frames"><img border=0 src="sample_code.png"></a>
     </div>
 
 
